force-app/main/default/objects/Criteria__c/Criteria__c.object-meta.xml
<CustomObject>
    <label>Criteria</label>
    <nameField>
        <label>Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>