force-app/main/default/objects/Criteria__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>