force-app/main/default/objects/Criteria__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Output</label>
    <referenceTo>Output__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>