force-app/main/default/objects/Criteria__c/fields/Output_Name_frm__c.field-meta.xml
<CustomField>
    <fullName>Output_Name_frm__c</fullName>
    <formula>Output__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Output Name</label>
    <type>Text</type>
</CustomField>